# ai-images-classifier

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  data_module.py  download_hf_dataset.py  export_to_onnx.py  lightning_module.py  main.py  model.py  predict.py  prepare_triton.py  pyproject.toml  requirements.txt  start_triton.sh  train.py  triton_predict.py
conf/: config.yaml  fast.yaml
conf/callbacks/: default.yaml
conf/data/: default.yaml
conf/download/: default.yaml
conf/hydra/: default.yaml
conf/lightning/: default.yaml  fast.yaml
conf/logger/: mlflow.yaml  tensorboard.yaml
conf/model/: efficientnet_b0.yaml  resnet50.yaml
conf/training/: default.yaml  fast.yaml
scripts/: README.md  format.sh  lint.sh
source/model/: model.py
source/modules/: data_module.py  lightning_module.py
src/ai_images_classifier/: predict.py  train.py
src/ai_images_classifier/model/: model.py
src/ai_images_classifier/modules/: data_module.py  lightning_module.py
src/ai_images_classifier/triton/: triton_client.py
src/ai_images_classifier/utils/: download_data.py  metrics_collector.py  mlflow_utils.py
triton_local/models/ai_classifier/: config.pbtxt
